Thu Mar 1 11:45:00 UTC 2012  Simon Massey <simon dot massey at prismtech dot com>

        * tests/DynValue_Test/main.cpp:
          Removed fuzz warning about NULL by changing case to Null.
          These are ACE_DEBUG text messages about Null ValueTypes not
          NULL pointer checks.

Thu Mar 1 11:27:00 UTC 2012  Simon Massey <simon dot massey at prismtech dot com>

        * tao/Valuetype_Adapter.h:
        * tao/AnyTypeCode/Any_Impl.cpp:
        * tao/Valuetype/Valuetype_Adapter_Impl.h:
        * tao/Valuetype/Valuetype_Adapter_Impl.cpp:
          Removed dependancy on ValueBase.h within Any_Impl.cpp using the adapter.

Wed Feb 29 16:30:00 UTC 2012  Simon Massey <simon dot massey at prismtech dot com>

        * TAO_IDL/be/be_visitor_typecode/value_typecode.cpp:
          Allow VM_TRUNCATABLE to be recorded in the typecode.

        * TAO_IDL/be/be_visitor_valuetype/any_op_cs.cpp:
          Stop the Any insertion of Valuetypes setting the any typecode to
          the fully derived type. This was stopping the value from being
          extracted (as the tc was wrong at extraction, or the embedded
          Any_Impl_T<base *> class wouldn't dynamic_cast to the Any_Impl_T<derived *>.

        * tao/AnyTypeCode/Any_Impl.cpp:
          When marshaling the any, If it is holding a valueType, send the
          fully derived typecode of the type being held instead of the
          Any embedded typecode. This effectivly takes over from the change
          to Any insertion above. (The value of the valuetype is always
          sent as the fully derived type, so the typecode must match what is
          actually sent.) This allows CORBA::Anys to hold a base pointer to
          a derived valuetype and marshal it correctly whilst still allowing
          the user to manipulate the value in the Any without locking
          themselves out!

        * tao/AnyTypeCode/Any_Unknown_IDL_Type.cpp:
          Add debug output to a silent Marshaling exception.
